# gegham

./: .gitmodules  CMakeLists.txt  README.md
include/: gegham.h
src/: main.c  main.cpp  table.c
