cmake_minimum_required(VERSION 3.10)
project("gegham" VERSION 0.0.1)
FILE(GLOB SRC_HPP include/*.hpp)
FILE(GLOB SRC_H include/*.h)
FILE(GLOB SRC_CPP src/*.cpp)
FILE(GLOB SRC_C src/*.c)
add_executable(gegham ${SRC_C} ${SRC_CPP})
add_subdirectory(helgarahi)
target_include_directories(gegham PUBLIC include)
target_link_libraries(gegham PUBLIC helgarahi sqlite3)
install(TARGETS gegham)

set(CPACK_GENERATOR "RPM")
include(CPack)